[package]
name = "qubd"
version = "1.8.2"
edition = "2021"
license = "MIT"
authors = ["QUB Core"]
description = "Qubit Coin v1.8.2 HF126 equal-height fork recovery, mineable PoW ties and clear local/network tip observability"
readme = "README.md"

[features]
default = []
pooled-mining-placeholder = []
jin-native-coin-placeholder = []

[dependencies]
anyhow = "1.0"
eframe = { version = "=0.34.1", default-features = true }

# Pin wgpu stack to known-good versions.
# wgpu-core 29.0.2 fails to compile on the current Windows toolchain.
wgpu = "=29.0.1"
wgpu-core = "=29.0.1"
wgpu-hal = "=29.0.1"
wgpu-types = "=29.0.1"
wgpu-naga-bridge = "=29.0.1"
naga = "=29.0.1"
hex = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
image = { version = "=0.25.10", default-features = false, features = ["png", "gif"] }
rand = "0.8"
ripemd = "0.1"
secp256k1 = { version = "0.29", features = ["rand", "rand-std", "recovery"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
qrcode = "0.14"
sha2 = "0.10"
toml = "0.8"
tiny-keccak = { version = "2.0", features = ["keccak"] }
webbrowser = "1.2"

[[bin]]
name = "qubd"
path = "src/main.rs"

[[bin]]
name = "qub-core"
path = "src/bin/qub_core.rs"

[[bin]]
name = "qub-rpc-miner"
path = "src/bin/qub_rpc_miner.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[build-dependencies]
winresource = "0.1"
image = { version = "=0.25.10", default-features = false, features = ["png"] }
ico = "0.4"
